; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_arc.c_l2arc_sublist_lock.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_arc.c_l2arc_sublist_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32** }
%struct.TYPE_3__ = type { i32** }

@L2ARC_FEED_TYPES = common dso_local global i32 0, align 4
@arc_mfu = common dso_local global %struct.TYPE_4__* null, align 8
@ARC_BUFC_METADATA = common dso_local global i64 0, align 8
@arc_mru = common dso_local global %struct.TYPE_3__* null, align 8
@ARC_BUFC_DATA = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32)* @l2arc_sublist_lock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @l2arc_sublist_lock(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32* null, i32** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = icmp sge i32 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @L2ARC_FEED_TYPES, align 4
  %11 = icmp slt i32 %9, %10
  br label %12

12:                                               ; preds = %8, %1
  %13 = phi i1 [ false, %1 ], [ %11, %8 ]
  %14 = zext i1 %13 to i32
  %15 = call i32 @ASSERT(i32 %14)
  %16 = load i32, i32* %3, align 4
  switch i32 %16, label %45 [
    i32 0, label %17
    i32 1, label %24
    i32 2, label %31
    i32 3, label %38
  ]

17:                                               ; preds = %12
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** @arc_mfu, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 0
  %20 = load i32**, i32*** %19, align 8
  %21 = load i64, i64* @ARC_BUFC_METADATA, align 8
  %22 = getelementptr inbounds i32*, i32** %20, i64 %21
  %23 = load i32*, i32** %22, align 8
  store i32* %23, i32** %4, align 8
  br label %46

24:                                               ; preds = %12
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** @arc_mru, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 0
  %27 = load i32**, i32*** %26, align 8
  %28 = load i64, i64* @ARC_BUFC_METADATA, align 8
  %29 = getelementptr inbounds i32*, i32** %27, i64 %28
  %30 = load i32*, i32** %29, align 8
  store i32* %30, i32** %4, align 8
  br label %46

31:                                               ; preds = %12
  %32 = load %struct.TYPE_4__*, %struct.TYPE_4__** @arc_mfu, align 8
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 0
  %34 = load i32**, i32*** %33, align 8
  %35 = load i64, i64* @ARC_BUFC_DATA, align 8
  %36 = getelementptr inbounds i32*, i32** %34, i64 %35
  %37 = load i32*, i32** %36, align 8
  store i32* %37, i32** %4, align 8
  br label %46

38:                                               ; preds = %12
  %39 = load %struct.TYPE_3__*, %struct.TYPE_3__** @arc_mru, align 8
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 0
  %41 = load i32**, i32*** %40, align 8
  %42 = load i64, i64* @ARC_BUFC_DATA, align 8
  %43 = getelementptr inbounds i32*, i32** %41, i64 %42
  %44 = load i32*, i32** %43, align 8
  store i32* %44, i32** %4, align 8
  br label %46

45:                                               ; preds = %12
  store i32* null, i32** %2, align 8
  br label %52

46:                                               ; preds = %38, %31, %24, %17
  %47 = load i32*, i32** %4, align 8
  %48 = call i32 @multilist_get_random_index(i32* %47)
  store i32 %48, i32* %5, align 4
  %49 = load i32*, i32** %4, align 8
  %50 = load i32, i32* %5, align 4
  %51 = call i32* @multilist_sublist_lock(i32* %49, i32 %50)
  store i32* %51, i32** %2, align 8
  br label %52

52:                                               ; preds = %46, %45
  %53 = load i32*, i32** %2, align 8
  ret i32* %53
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @multilist_get_random_index(i32*) #1

declare dso_local i32* @multilist_sublist_lock(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
